# hopperscapes

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  pyproject.toml  requirements.txt  spine.md
.github/workflows/: tests.yml
checkpoints/: HopperNetLite_demo.pth
configs/: configs.yaml  train.yaml  unified.yaml  unified_lite.yaml
configs/data/: dataset.yaml
configs/models/: unet.yaml  unet_legacy.yaml
configs/training/: train.yaml
hopper_vae/: configs.py  configs.yaml
hopper_vae/data/: preprocess.py  record.py  zarr_store.py
hopper_vae/imageproc/: preprocess.py
hopper_vae/morphometry/: spots.py  wing.py
hopper_vae/segmentation/: README.md  _augment_funcs.py  augment.py  data_io.py  dataset.py  infer.py  loss.py  models.py  train.py
hopperscapes/: __init__.py  configs.py  configs.yaml
hopperscapes/data/: record.py  zarr_store.py
hopperscapes/imageproc/: alignment.py  color.py  masks.py  preprocess.py
hopperscapes/morphometry/: spots.py  utils.py  venation.py  wing.py
hopperscapes/segmentation/: README.md  dataset.py  infer.py  legacy_models.py  loss.py  models.py  train.py
notebooks/: demo_pretrained_unet.ipynb
scripts/: create_zarr_stores.py  eval.py
scripts/crawlers/: commons_crawler_gemini.py
scripts/data_processing/: integrate_dataset_gemini.py
scripts/visualization/: eval.py  visualize_feature_maps.py  visualize_features.py  visualize_predictions.py
src/: record.py
tests/: test_minimal.py
tests/data/: test_dataset_class.py  test_preprocess.py  test_read_image_header.py  test_record_minimal.py  (+1 more)
(+955 files in other folders)
