[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "hopperscapes"
packages = ['hopperscapes']
version = "0.1.0"
description = "Morphometry and generative modeling of insect wings"
readme = "README.md"
license = "MIT"
authors = [
    { name="Sassan Ostvar", email="sassan.ostvar@gmail.com" }
]
requires-python = ">=3.8"

dependencies = [
    "pydantic==1.10.4"
]

[project.optional-dependencies]
test = [
    "pytest==7.4.0",
    "coverage",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["hopperscapes"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]